--- a/Mips.qsf
+++ b/Mips.qsf
@@ -39,7 +39,7 @@
 
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CGXFC7C7F23C8
-set_global_assignment -name TOP_LEVEL_ENTITY Mips
+set_global_assignment -name TOP_LEVEL_ENTITY main_controler
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 16.0.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "13:19:03  NOVEMBER 23, 2016"
 set_global_assignment -name LAST_QUARTUS_VERSION 16.0.0
@@ -50,10 +50,18 @@ set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (Verilog)"
 set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
+set_global_assignment -name SYSTEMVERILOG_FILE alu.sv
+set_global_assignment -name SYSTEMVERILOG_FILE signExtend.sv
+set_global_assignment -name SYSTEMVERILOG_FILE register_file.sv
+set_global_assignment -name SYSTEMVERILOG_FILE adder.sv
 set_global_assignment -name SYSTEMVERILOG_FILE single_port_ram.sv
 set_global_assignment -name SYSTEMVERILOG_FILE single_port_rom.sv
-set_global_assignment -name SYSTEMVERILOG_FILE ../Documentos/MIPS/signExtend.sv
-set_global_assignment -name SYSTEMVERILOG_FILE ../Documentos/MIPS/register_file.sv
-set_global_assignment -name SYSTEMVERILOG_FILE ../Documentos/MIPS/alu.sv
-set_global_assignment -name SYSTEMVERILOG_FILE ../Documentos/MIPS/adder.sv
-set_global_assignment -name SYSTEMVERILOG_FILE ../Documentos/MIPS/adder8.sv
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name SYSTEMVERILOG_FILE mux2.sv
+set_global_assignment -name SYSTEMVERILOG_FILE desloc2.sv
+set_global_assignment -name SYSTEMVERILOG_FILE main_controler.sv
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
