--- a/Mips.qsf
+++ b/Mips.qsf
@@ -39,7 +39,7 @@
 
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CGXFC7C7F23C8
-set_global_assignment -name TOP_LEVEL_ENTITY main_controler
+set_global_assignment -name TOP_LEVEL_ENTITY mainDecoder
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 16.0.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "13:19:03  NOVEMBER 23, 2016"
 set_global_assignment -name LAST_QUARTUS_VERSION 16.0.0
@@ -60,7 +60,8 @@ set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name SYSTEMVERILOG_FILE mux2.sv
 set_global_assignment -name SYSTEMVERILOG_FILE desloc2.sv
-set_global_assignment -name SYSTEMVERILOG_FILE main_controler.sv
+set_global_assignment -name SYSTEMVERILOG_FILE aluDecoder.sv
+set_global_assignment -name SYSTEMVERILOG_FILE mainDecoder.sv
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
